# HAILS

./: README.md  pretrainm5.py  pyproject.toml  runm5.py  trainm5.py
dataset/M5/: .gitignore  README.md  extract.sh
notebooks/: explorem5.ipynb  test_hails.ipynb  testseq.ipynb
src/hails/: __init__.py  hails.py  layers.py  losses.py  seq_layers.py
src/ts_utils/: datasets.py  m5_dataset.py  metrics.py  transforms.py  utils.py
