[project]
name = "hails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "properscoring>=0.1",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "torch>=2.4.1",
    "tqdm>=4.66.5",
]

[project.scripts]
hello = "hails:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipython>=8.27.0",
    "ruff>=0.6.5",
]

[tool.hatch.build]
exclude = ["dataset/M5/Dataset/*", "dataset/M5/M5Dataset.zip"]

[tool.hatch.build.targets.wheel]
packages = ["src/hails", "src/ts_utils"]
